--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Julio Bautista</h1>
-    <img src="../assets/picture.jpg" alt="" height="200">
+    <img src="./assets/picture.jpg" alt="" height="200">
     <h2>Sumarry</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut eligendi iste voluptate, repudiandae distinctio inventore veniam illum aperiam ab voluptatem?</p>
     <h2>Education</h2>
